Feature-fix/modified form in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,15 @@
     </style>
 </head>
 <body>
-    <h1>Java Engine GUI</h1>
+    <h1>Shopping Center</h1>
     <form id="user-form">
-        <label for="user_input">Input:</label>
+        <label for="user_input">FirstName:</label>
+        <input type="text" id="user_input" name="user_input" required>
+		<label for="user_input">LastName:</label>
+        <input type="text" id="user_input" name="user_input" required>
+		<label for="user_input">Email:</label>
+        <input type="text" id="user_input" name="user_input" required>
+		<label for="user_input">Id:</label>
         <input type="text" id="user_input" name="user_input" required>
         <button type="submit">Submit</button>
     </form>
